tests/core/error/triples-4.rq
# Use unknown property in negated path
SELECT ?u { ?u rdf:value / ! nrl:asdfqwertyuiop 42 }
